--- a/index.html
+++ b/index.html
@@ -459,18 +459,20 @@
 
     <!-- Landing Page -->
     <div id="landing-page" class="min-h-screen landing-bg flex flex-col md:flex-row">
-        <!-- Contenedor izquierdo - Bienvenida -->
-        <div class="flex-1 flex flex-col justify-center p-8 md:p-16 text-white">
-            <div class="max-w-xl">
-                <div class="w-16 h-16 bg-white rounded-xl flex items-center justify-center text-3xl text-primary mb-6">
-                    <i class="fas fa-wallet"></i>
-                </div>
-                <h1 class="text-5xl md:text-6xl font-extrabold mb-4">Sistema de Control Financiero</h1>
-                <p class="text-2xl md:text-3xl font-light mb-8 opacity-90">Control diario de ingresos y gastos del Hogar.</p>
+        <!-- Contenedor izquierdo - Imagen y título -->
+        <div class="flex-1 flex flex-col justify-center items-center p-8 md:p-16 text-white">
+            <div class="w-full max-w-md mb-6 md:mb-8">
+                <img src="https://github.com/rfioravante73-ar/finanzas/blob/main/alcancia.png?raw=true" 
+                     alt="Alcancía Financiera" 
+                     class="w-full h-auto rounded-xl shadow-2xl">
+            </div>
+            <div class="text-center">
+                <h1 class="text-3xl sm:text-4xl md:text-5xl font-extrabold mb-3 md:mb-4">Sistema de Control Financiero</h1>
+                <p class="text-lg sm:text-xl md:text-2xl font-light opacity-90">Control diario de ingresos y gastos del Hogar.</p>
             </div>
         </div>
         
-        <!-- Contenedor derecho - Login -->
+        <!-- Contenedor derecho - Login (sin cambios) -->
         <div class="flex-1 flex items-center justify-center p-8">
             <div class="login-container rounded-2xl p-8 md:p-12 w-full max-w-md">
                 <h2 class="text-3xl font-bold text-white mb-2">Acceso al Sistema</h2>
